k8s/match-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: match-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: match-db
  template:
    metadata:
      labels:
        app: match-db
    spec:
      containers:
        - name: match-db
          image: mysql:8.0
          ports:
            - containerPort: 3306

---
apiVersion: v1
kind: Service
metadata:
  name: match-db
spec:
  selector:
    app: match-db
  ports:
    - port: 3306
      targetPort: 3306

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: match-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: match-service
  template:
    metadata:
      labels:
        app: match-service
    spec:
      containers:
        - name: match-service
          image: barthaanna2002/worldcup-match-service:1.0
          ports:
            - containerPort: 8082

---
apiVersion: v1
kind: Service
metadata:
  name: match-service
spec:
  selector:
    app: match-service
  ports:
    - port: 8082
      targetPort: 8082
  type: NodePort
