k8s/match-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: match-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: match.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: match-service
                port:
                  number: 8082
